--- a/main.yaml
+++ b/main.yaml
@@ -1,5 +1,7 @@
-- name: "configuring {{ component }} server"
+- name: "configuring {{ COMPONENT }} server"
   hosts: all
   become: yes
+  vars_files:
+  - "variables-{{ ENVIRONMENT }}.yaml"
   roles:
-  - "{{ component }}"
+  - "{{ COMPONENT }}"
