--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,3 @@
-BACKEND_HOST: backend.sriyaandansh.fun
+BACKEND_HOST: "backend.app-{{ ENVIRONMENT }}.sriyaandansh.fun"
 APP_LOCAION: /usr/share/nginx/html
 COMPONENT: frontend
